# zeroday-paper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cdk-outputs.json  cdk.json  entrypoint.sh  pyproject.toml
config/: paper.toml
infra/: app.py  stack.py
scripts/: deploy.sh  post-status.sh  preflight.py  trigger_replay.sh
tests/: __init__.py  conftest.py  test_cboe_client.py  test_cli.py  test_config.py  test_daily_report.py  test_flashalpha_client.py  test_gex_levels.py  test_gex_patterns.py  test_gex_patterns_llm.py  test_journal.py  test_logging_setup.py  test_metrics.py  test_models.py  test_morning_brief.py  test_perplexity_client.py  test_polygon_client.py  test_pricing.py  test_replay.py  test_scanner.py  test_score.py  test_secrets.py  test_state.py  test_stats.py  test_status_brief.py  test_strike_select.py
zeroday_paper/: __init__.py  config.py  logging_setup.py  metrics.py  secrets.py
zeroday_paper/cli/: __init__.py  run_diag.py  run_live.py  run_morning.py  run_replay.py  run_report.py  run_status.py
zeroday_paper/data/: __init__.py  cboe_client.py  flashalpha_client.py  perplexity_client.py  polygon_client.py
zeroday_paper/engine/: __init__.py  gex_levels.py  gex_patterns.py  gex_patterns_llm.py  journal.py  models.py  pricing.py  replay.py  scanner.py  score.py  state.py  strike_select.py
zeroday_paper/reporting/: __init__.py  daily_report.py  morning_brief.py  stats.py  status_brief.py
