[project]
name = "zeroday-paper"
version = "0.1.0"
description = "SPX 0DTE paper trading engine — replay-first, AWS-native, low-noise. Companion to zeroday-trading."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "yachsiv" }]

dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "duckdb>=1.1",
    "polars>=1.9",
    "pydantic>=2.7",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "anthropic>=0.39",
    "boto3>=1.34",
    "tomli>=2.0; python_version<'3.11'",
    "discord-webhook>=1.3",
    "websockets>=12.0",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
cdk = [
    "aws-cdk-lib>=2.150",
    "constructs>=10.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
zp-replay = "zeroday_paper.cli.run_replay:main"
zp-live   = "zeroday_paper.cli.run_live:main"
zp-report = "zeroday_paper.cli.run_report:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zeroday_paper"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "cdk.out", ".git", "data/", "reports/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM108"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: hits live APIs",
    "slow: slow tests",
]

[tool.coverage.run]
branch = false
source = ["zeroday_paper"]
omit = [
    "zeroday_paper/cli/run_live.py",
    "zeroday_paper/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
skip_covered = false
show_missing = true
